benchmarks/verus/bignum/vericoder_glm_15-09_18h46/debug/bignum_ModExp_DivMod_Mul_iter5_error.log
=== Verification Error - Iteration 5 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExp_DivMod_Mul.rs
Time: 2025-09-15 19:14:56

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0599]: no method named `spec_shl` found for struct `vstd::prelude::nat` in the current scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_DivMod_Mul_impl.rs:66:17
   |
66 |                 Str2Int(res@) << current_bit <= num as nat
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: there is a method `spec_mul` with a similar name
   |
66 -                 Str2Int(res@) << current_bit <= num as nat
66 +                 spec_mul <= num as nat
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.

--------------------------------------------------------------------------------

Additional Output:
error[E0599]: no method named `spec_shl` found for struct `vstd::prelude::nat` in the current scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_DivMod_Mul_impl.rs:66:17
   |
66 |                 Str2Int(res@) << current_bit <= num as nat
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: there is a method `spec_mul` with a similar name
   |
66 -                 Str2Int(res@) << current_bit <= num as nat
66 +                 spec_mul <= num as nat
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
